[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
build                                   = "build.rs"
categories                              = ["external-ffi-bindings"]
description                             = "Low-level bindings for the Bitwuzla SMT solver"
documentation                           = "https://docs.rs/bitwuzla-sys"
edition                                 = "2021"
homepage                                = "https://github.com/fatemender/bitwuzla-sys"
keywords                                = ["ffi", "smt"]
license                                 = "MIT"
links                                   = "bitwuzla"
name                                    = "bitwuzla-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/bitwuzla-sys"
version                                 = "0.5.1"

[features]
vendor-cadical                          = ["copy_dir"]

[dependencies]
libc                                    = "0.2"

[build-dependencies]
copy_dir                                = { version = "0.1", optional = true }
