[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
build                                   = "build.rs"
categories                              = ["external-ffi-bindings"]
description                             = "Low-level bindings for the Bitwuzla SMT solver"
documentation                           = "https://docs.rs/bitwuzla-sys"
edition                                 = "2021"
homepage                                = "https://github.com/fatemender/bitwuzla-sys"
keywords                                = ["ffi", "smt"]
license                                 = "MIT"
links                                   = "bitwuzla"
name                                    = "bitwuzla-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/bitwuzla-sys"
rust-version                            = "1.82"
version                                 = "0.8.0"

[features]
vendor-cadical                          = ["copy_dir", "pkg-config"]

[dependencies]
libc                                    = "0.2"

[build-dependencies]
copy_dir                                = { version = "0.1", optional = true }
pkg-config                              = { version = "0.3", optional = true }
